useBeetl in edit beetl view and some infos displayed

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -14,4 +14,7 @@
   .link {
     @apply cursor-pointer text-primary-dark font-semibold;
   }
+  .highlight-area {
+    @apply rounded bg-black bg-opacity-10
+  }
 }
